[tool.poetry]
name = "hypermodern-python"
version = "0.2.2"
description = "The hypermodern Python project"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cjolowicz/hypermodern-python"
repository = "https://github.com/cjolowicz/hypermodern-python"
documentation = "https://hypermodern-python.readthedocs.io"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.22.0"
marshmallow = "^3.3.0"
desert = "^2020.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-mock = "3.14.0"
#mypy = "^0.761" - causes break on windows typed-ast error
pyinstaller = {version = "^6.8.0", python="^3.8,<3.13"}

[tool.poetry.scripts]
qdb = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
