[tool.poetry]
name = "mypythondb"
version = "0.2.2"
description = "The MyPythonDB project"
authors = ["Ryan Hamilton"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryanhamilton/pythondb"
repository = "https://github.com/ryanhamilton/pythondb"
documentation = "https://github.com/ryanhamilton/pythondb"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
requests = "^2.22.0"
marshmallow = "^3.3.0"
desert = "^2020.1.6"
duckdb = "1.0.0"
polars = "0.20.31"
pyarrow = "16.1.0"
pandas = "2.2.2"
XlsxWriter = "3.2.0"
mysql_mimic = "2.5.5"
deltalake = "^0.18.2"
kola = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-mock = "3.14.0"
#mypy = "^0.761" - causes break on windows typed-ast error
pyinstaller = {version = "^6.8.0", python="^3.8,<3.13"}
mysql-connector = "^2.2.9"

[tool.poetry.scripts]
pythondb = "mypythondb.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mypythondb"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
